# racecontrol-client

./: .gitignore  README.md  pyproject.toml
racecontrol/: __init__.py  client.py  config.py  fantasy.py  http.py  jolpica.py
racecontrol.egg-info/: PKG-INFO  SOURCES.txt
racecontrol/data/: client.py
racecontrol/services/: __init__.py  fantasy.py
racecontrol/utils/: http.py
racecontrolClient/: __init__.py
racecontrolClient/data/: __init__.py  client.py  provider_jolpica.py
racecontrolClient/services/: __init__.py  fantasy.py  results.py
racecontrolClient/utils/: __init__.py  config.py  http.py
