[project]
name = "racecontrol"
version = "1.0.0"
description = "RaceControl F1 data client using the Jolpica API."
authors = [{name = "Ali Adem"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
]

[tool.setuptools]
packages = ["racecontrol"]