[project]
name = "racecontrolClient"
version = "1.0.0"
description = "Backend data & services for the RaceControl F1 dashboard"
authors = [{ name = "Ali Adem" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"